Creates script for handling gitpost

--- a/pelican/Dockerfile
+++ b/pelican/Dockerfile
@@ -3,8 +3,7 @@ LABEL maintainer 'Thiago Rocha <me@thiroc.me>'
 
 # Initial setup
 RUN apt update && apt upgrade -y && \
-	apt install python3 python3-pip -y && \
-	pip install pelican markdown
+	pip install pelican markdown flask
 RUN mkdir -p /srv/pelican/content && \
 	cd /srv/pelican
 
@@ -15,3 +14,9 @@ COPY publishconf.py /srv/pelican/
 COPY Makefile /srv/pelican/
 
 WORKDIR /srv/pelican
+
+# Setup and run flask server to handle git post
+COPY gitpost.py /srv/pelican/
+RUN mkdir ./log/
+#RUN chown www-data:www-data -R /var/log/gitpost
+CMD [ "python", ".gitpost.py" ]
