--- a/git/Dockerfile
+++ b/git/Dockerfile
@@ -2,16 +2,18 @@ FROM alpine:3.10
 LABEL mantainer 'Thiago Rocha <me@thiroc.me'
 
 RUN apk update && apk upgrade
+RUN apk add --no-cache git
+RUN apk add --no-cache git-daemon
 
-RUN useradd git
+RUN addgroup -S git && adduser -S git -G git
 USER git
 WORKDIR /home/git
-
-RUN apk add --update git
 
 RUN mkdir repo content
 RUN cd repo && \
 	git init --bare
 
-COPY post-receive ~/repo/hooks/
-RUN chmod +x ~/repo/hooks/post-receive
+COPY --chown=git:git ./post-receive ./repo/hooks/
+RUN chmod +x ./repo/hooks/post-receive
+
+ENTRYPOINT ["git", "daemon", "--enable=receive-pack", "--base-path=.", "--export-all", "."]
