--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,8 +1,8 @@
 server {
 	listen 80;
-	server_name domain.name
+	server_name domain.name;
 	# source folder for site html
-	root /usr/share/nginx/html
+	root /usr/share/nginx/html;
 
 	# Prevent access to source files
 	location ~ .*\.pyc? {
