--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ networks:
 services:
     front:
         image: nginx:1.16
+        container_name: nginx
         volumes:
             - html:/usr/share/nginx/html/
             - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
@@ -19,6 +20,7 @@ services:
             - pelican
     git:
         build: ./git
+        container_name: git
         volumes:
             - artigos:/home/git/repo/
         networks:
