Updates themes dir and changes author in pelicanconf

--- a/pelican/Dockerfile
+++ b/pelican/Dockerfile
@@ -4,13 +4,13 @@ LABEL maintainer 'Thiago Rocha <me@thiroc.me>'
 # Initial setup
 RUN apt update && apt upgrade -y && \
 	pip install pelican markdown flask
-RUN mkdir -p /srv/pelican/content && \
-	cd /srv/pelican
+RUN mkdir -p /srv/pelican/content
 
 # Copy relevant pelican files
 COPY ./content/first.md /srv/pelican/content
 COPY pelicanconf.py /srv/pelican/
 COPY publishconf.py /srv/pelican/
+COPY ./themes/ /srv/pelican/themes/
 COPY Makefile /srv/pelican/
 
 WORKDIR /srv/pelican
