Changes domain configs to localhost to facilitate local testing

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
 	listen 80;
-	server_name domain.name;
+	server_name localhost;
 	# source folder for site html
 	root /usr/share/nginx/html;
 
